<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--    LinearLayout was the layout of choice for this file because of the simplicity-->
    <!--    of the overall structure being a vertical stack, there is no further complexity.-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcomeTitleTextView"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_double"
            android:text="@string/welcome"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/welcomeSubtitleTextView"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_double"
            android:text="@string/shoe_store_inventory"
            android:textSize="@dimen/subtitle_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/welcomeMessageTextView"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_double"
            android:lineSpacingMultiplier="1.25"
            android:text="@string/manage_your_shoe_store_inventory_and_details"
            android:textSize="@dimen/message_text_size" />

        <TextView
            android:id="@+id/welcomeNextMessageTextView"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/click_next_to_learn_more"
            android:textSize="@dimen/message_text_size" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/welcomeNextMaterialButton"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/next"
            app:cornerRadius="@dimen/button_corner_radius" />

    </LinearLayout>

</layout>
