<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--    LinearLayout was the layout of choice for this file because of the simplicity-->
    <!--    of the overall structure being a vertical stack, there is no further complexity.-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/instructionsTitleTextView"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_double"
            android:text="@string/instructions"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/instructionsMessageTextView"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_double"
            android:lineSpacingMultiplier="1.25"
            android:text="@string/shoe_instructions_text"
            android:textSize="@dimen/message_text_size" />

        <TextView
            android:id="@+id/instructionsFinishMessageTextView"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_double"
            android:text="@string/click_below_to_begin"
            android:textSize="@dimen/message_text_size" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/instructionsBeginMaterialButton"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/begin"
            app:cornerRadius="@dimen/button_corner_radius" />

    </LinearLayout>

</layout>